--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,20 @@
-@import url('https://fonts.cdnfonts.com/css/gilroy-bold');
+@import url("https://fonts.cdnfonts.com/css/gilroy-bold");
 /* Font from https://www.cdnfonts.com/ru/gilroy-bold.font */
 
 #root {
-  font-family: 'Gilroy-Regular', sans-serif;
-  max-width: 1280px;
+  font-family: "Gilroy-Regular", sans-serif;
+  /*max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  text-align: center;*/
 }
 
 h2 {
-  font-family: 'Gilroy-Bold', sans-serif;
+  font-family: "Gilroy-Bold", sans-serif;
   font-size: 32px;
   font-weight: 700;
+}
+
+* {
+   font-family: "Gilroy-Regular", sans-serif;
 }
