--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.cdnfonts.com/css/gilroy-bold");
 /* Font from https://www.cdnfonts.com/ru/gilroy-bold.font */
 
+* {
+    font-family: "Gilroy-Regular", sans-serif !important;
+}
+
 #root {
   font-family: "Gilroy-Regular", sans-serif;
   /*max-width: 1280px;
@@ -10,8 +14,13 @@
 }
 
 h2 {
-  font-family: "Gilroy-Bold", sans-serif;
+  font-family: "Gilroy-Bold", sans-serif !important;
   font-size: 32px;
+  font-weight: 700;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Gilroy-Bold", sans-serif !important;
   font-weight: 700;
 }
 
